# tactilesql

./: AGENTS.md  README.md  index.html  package-lock.json  package.json  splashscreen.css  splashscreen.html  tailwind.config.js  vite.config.js
src/: index.css  (+2 more)
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: clickhouse.rs  db.rs  db_types.rs  lib.rs  main.rs  mssql.rs  mysql.rs  postgres.rs  scheduler.rs  ssh_tunnel.rs
src-tauri/src/awareness/: anomaly.rs  comparator.rs  mod.rs  profiler.rs  store.rs
src-tauri/src/chronicle/: mod.rs  storytelling.rs
src-tauri/src/clickhouse/: mod.rs  tests.rs
src-tauri/src/common/: storage.rs
src-tauri/src/data_transfer/: commands.rs  engine.rs  mapper.rs  mod.rs  models.rs  planner.rs  storage.rs
src-tauri/src/db/: connections.rs  crypto.rs  data_compare.rs  data_transfer.rs  diagnostics.rs  helpers.rs  lock_analysis.rs  metadata.rs  mock_jobs.rs  mod.rs  objects.rs  query_execution.rs  sql_utils.rs  table_ops.rs  users.rs
src-tauri/src/db_types/: mod.rs  tests.rs
src-tauri/src/dependency_engine/: commands.rs  extractor.rs  graph.rs  mod.rs  parser.rs  storage.rs
src-tauri/src/duckdb/: mod.rs
src-tauri/src/er_diagram/: commands.rs  mod.rs  models.rs  storage.rs
src-tauri/src/impact_analyzer/: mod.rs
src-tauri/src/integration/: commands.rs  impact_check.rs  mod.rs
src-tauri/src/mock_data/: mod.rs  tests.rs
src-tauri/src/mssql/: mod.rs  tests.rs
src-tauri/src/mysql/: mod.rs  tests.rs
src-tauri/src/postgres/: mod.rs  tests.rs
src-tauri/src/quality_analyzer/: analyze.rs  commands.rs  mod.rs  models.rs  storage.rs
src-tauri/src/query_story/: commands.rs  mod.rs  models.rs  storage.rs
src-tauri/src/scheduler/: mod.rs  tests.rs
src-tauri/src/schema_tracker/: capture.rs  commands.rs  diff.rs  migration.rs  mod.rs  models.rs  storage.rs
(+301 files in other folders)
