[package]
name = "tactilesql"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "tactilesql_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["devtools"] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1", features = ["preserve_order"] }
async-trait = "0.1"
sqlx = { version = "0.8", features = ["mysql", "postgres", "sqlite", "runtime-tokio", "tls-native-tls", "chrono", "json"] }
tokio = { version = "1", features = ["full"] }
log = "0.4"
uuid = { version = "1.20.0", features = ["v4", "serde"] }
# Password encryption
aes-gcm = "0.10"
base64 = "0.22"
rand = "0.8"
keyring = "3"
# SSH Tunnel
ssh2 = "0.9"
dirs = "5"
# File handling
csv = "1.3"
chrono = { version = "0.4", features = ["serde"] }
hex = "0.4"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-notification = "2"
futures = "0.3"
similar = "2.7.0"
regex = "1"
sha2 = "0.10.9"
clickhouse = { version = "0.13", features = ["lz4", "test-util"] }
reqwest = { version = "0.12", features = ["json", "blocking"] }

# MSSQL Support
tiberius = { version = "0.12", features = ["tds73", "chrono"] }
deadpool-tiberius = "0.1"
tokio-util = { version = "0.7", features = ["compat"] }

# Dependency Engine
sqlparser = "0.48"
petgraph = { version = "0.6", features = ["serde-1"] }

